<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_gray">

        <include
            android:id="@+id/user_photo_toolbar_include"
            layout="@layout/gray_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title_photo_TextView"
            style="@style/textStyleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:contentDescription="@string/user_photo_title"
            android:gravity="start"
            android:text="@string/user_photo_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_photo_toolbar_include" />

        <TextView
            android:id="@+id/subtitle_photo_TextView"
            style="@style/textStyleSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:contentDescription="@string/user_photo_description"
            android:text="@string/user_photo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_photo_TextView" />

        <ImageView
            android:id="@+id/image_photo_imageView"
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:layout_marginTop="@dimen/margin_64"
            android:background="@drawable/ic_img_placeholder_add_photo"
            android:contentDescription="@string/user_photo_content_description"
            android:scaleType="centerCrop"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle_photo_TextView" />


        <ImageButton
            android:id="@+id/photo_back_imageButton"
            style="@style/arrowBackButtonStyle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_32"
            android:contentDescription="@string/arrow_back_button"
            app:layout_constraintBottom_toTopOf="@id/photo_linearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/photo_conclude_appCompatButton"
            style="@style/buttonsStyle"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_32"
            android:contentDescription="@string/button_conclude"
            android:text="@string/finish"
            android:elevation="0dp"
            app:layout_constraintBottom_toTopOf="@id/photo_linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/photo_back_imageButton" />

        <LinearLayout
            android:id="@+id/photo_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_photo_has_account_textView"
                style="@style/textStyleHasAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/has_account"
                android:text="@string/has_account" />

            <TextView
                android:id="@+id/enter_photo_TextView"
                style="@style/textStyleEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:contentDescription="@string/description_enter"
                android:text="@string/enter" />

        </LinearLayout>

        <include
            android:id="@+id/loadScreen"
            layout="@layout/loadscreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>