<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_gray">

        <include
            android:id="@+id/email_toolbar_include"
            layout="@layout/gray_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/email_title_textView"
            style="@style/textStyleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:contentDescription="@string/email_fragment_title"
            android:text="@string/email_fragment_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_toolbar_include" />

        <TextView
            android:id="@+id/email_description_textView"
            style="@style/textStyleSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:contentDescription="@string/email_fragment_description"
            android:text="@string/email_fragment_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/email_title_textView"
            app:layout_constraintTop_toBottomOf="@id/email_title_textView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/username_underline"
            android:contentDescription="@string/input_email"
            android:fontFamily="@font/gilroy_regular"
            android:inputType="textEmailAddress"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/email_description_textView"
            app:layout_constraintTop_toBottomOf="@id/email_description_textView" />

        <ImageButton
            android:id="@+id/email_back_imageButton"
            style="@style/arrowBackButtonStyle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_32"
            android:contentDescription="@string/arrow_back_button"
            app:layout_constraintBottom_toTopOf="@id/email_has_account_linearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/email_next_appCompatButton"
            style="@style/buttonsStyle"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_32"
            android:contentDescription="@string/button_next"
            android:text="@string/next"
            app:layout_constraintBottom_toTopOf="@id/email_has_account_linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/email_back_imageButton" />

        <LinearLayout
            android:id="@+id/email_has_account_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_email_has_account_textView"
                style="@style/textStyleHasAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/has_account"
                android:fontFamily="@font/gilroy_regular" />

            <TextView
                android:id="@+id/enter_email_textView"
                style="@style/textStyleEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_enter" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
