<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_gray"
        android:orientation="vertical">

        <include
            android:id="@+id/username_toolbar_include"
            layout="@layout/gray_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/userName_title"
            style="@style/textStyleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:contentDescription="@string/username_fragment_title"
            android:text="@string/username_fragment_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_toolbar_include" />

        <TextView
            android:id="@+id/userName_description"
            style="@style/textStyleSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:contentDescription="@string/username_fragment_description"
            android:text="@string/username_fragment_description"
            app:layout_constraintStart_toStartOf="@id/userName_title"
            app:layout_constraintTop_toBottomOf="@id/userName_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username_editText"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/username_underline"
            android:contentDescription="@string/input_full_name"
            android:digits="QWERTZUIOPASDFGHJKLYXCVBNMqwertzuiopasdfghjklyxcvbnm\u0020"
            android:fontFamily="@font/gilroy_regular"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/userName_description"
            app:layout_constraintTop_toBottomOf="@id/userName_description"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/username_next_appCompatButton"
            style="@style/buttonsStyle"
            android:layout_width="360dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_32"
            android:contentDescription="@string/button_next"
            android:text="@string/next"
            app:layout_constraintBottom_toTopOf="@id/username_linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/username_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_username_has_account_textView"
                style="@style/textStyleHasAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/has_account"
                android:fontFamily="@font/gilroy_regular" />

            <TextView
                android:id="@+id/enter_username_textView"
                style="@style/textStyleEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_enter" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>