<?xml version="1.0" encoding="utf-8"?>
<layout>
    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card"
        android:layout_width="170dp"
        android:layout_height="160dp"
        android:layout_margin="@dimen/margin_8"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/motivation_theme_banner_imageView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/theme_image_view_description"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/motivation_theme_filter_imageView"
                android:layout_width="176dp"
                android:layout_height="160dp"
                android:contentDescription="@string/theme_image_view_filter_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/theme_background_gradient" />

            <TextView
                android:id="@+id/theme_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/themes_subscribers_textView"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/theme_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/themes_subscribers_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/motivation_theme_banner_imageView"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/theme_subscribers"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
